ARROW-3098: [C++/Python] Allow seeking at end of BufferReader and FixedSizeBufferWriter